@@ -26,4 +26,12 @@ BUILT_SOURCES += \
 webcore_built_sources += \
 	DerivedSources/WebInspectorUI/GResourceBundle.c
 
-EXTRA_DIST += $(inspector_files)
+EXTRA_DIST += \
+	$(WebInspectorUI)/Localizations/en.lproj/localizedStrings.js \
+	$(shell ls $(WebInspectorUI)/UserInterface/*.html) \
+	$(shell ls $(WebInspectorUI)/UserInterface/*.js) \
+	$(shell ls $(WebInspectorUI)/UserInterface/*.css) \
+	$(shell ls $(WebInspectorUI)/UserInterface/Images/gtk/*.png) \
+	$(shell ls $(WebInspectorUI)/UserInterface/Images/gtk/*.svg) \
+	$(shell ls $(WebInspectorUI)/UserInterface/External/CodeMirror/*.js) \
+	$(shell ls $(WebInspectorUI)/UserInterface/External/CodeMirror/*.css)
